--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>valentine?</title>
+    <title>feliz cumpleaños</title>
 </head>
 <body class="container">
     <div class="night"></div>
@@ -15,11 +15,11 @@
             <div class="lid two"></div>
             <div class="envelope"></div>
             <div class="letter">
-                <p>Happy Valentine's Day ❤️</p>
+                <p>FELIZ CUMPLEAÑOS GABY  ❤️</p>
             </div>
         </div>
         <div class="buttons">
-            <button id="openBtn">Open</button>
+            <button id="openBtn">ABRIR</button>
             <button id="closeBtn" style="display: none;">Close</button>
         </div>
     </div>
